# fastapi_template

./: .gitignore  Makefile  alembic.ini  pyproject.toml
config_dst/: config.yml
src/api/: __main__.py  config.py  factory.py
src/api/providers/: main.py  schemas.py  uow.py
src/api/routers/: setup.py  user.py
src/api/service_layer/: __init__.py  user.py
src/application/adapters/: uow.py  user.py
src/application/dto/: __init__.py  user.py
src/application/interfaces/: uow.py
src/entrypoints/: __main__.py  factory.py
src/entrypoints/providers/: main.py  schemas.py  uow.py
src/entrypoints/routers/: setup.py  user.py
src/infrastructure/: config_loader.py
src/infrastructure/db/: config.py  factory.py  main.py  unit_of_work.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 89cc5cb346c0_init_db.py  f6efa8452564_init_db.py
src/infrastructure/db/models/: base.py  user.py
src/infrastructure/db/repositories/: user.py
src/infrastructure/service_layer/: unit_of_work.py  user.py
tests/: conftest.py
tests/integration/: conftest.py  test_uow.py
tests/mocks/: repository.py  uow.py
tests/unit/: conftest.py  test_services.py
