[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Yurii Yankov <yankov.yurii@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
uvicorn = "^0.24.0.post1"




[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-twisted = "^1.14.0"
pytest-trio = "^0.8.0"
pytest-asyncio = "^0.23.2"
twisted = "^23.10.0"
pytest-order = "^1.2.0"
pytest-tornasync = "^0.6.0.post2"
testcontainers = "^3.7.1"
orjson = "^3.9.10"
sqlalchemy-utils = "^0.41.1"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
